--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
   <link rel="stylesheet" href="assets/css/templatemo-liberty-market.css">
   <link rel="stylesheet" href="assets/css/owl.css">
   <link rel="stylesheet" href="assets/css/lista.css">
+  <link rel="stylesheet" href="assets/css/preguntas.css">
+  <link rel="stylesheet" href="assets/css/planes.css">
+  <link rel="stylesheet" href="assets/css/infocard.css">
 
   <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
 
@@ -56,7 +59,7 @@
             <ul class="nav">
               <li><a href="" class="active">Nosotros</a></li>
               <li><a href="">Contacto</a></li>
-              <li><a href="">Preguntas Frecuentes</a></li>
+              <li><a href="faq.html">Preguntas Frecuentes</a></li>
               <li><a href="">Wolf-Premium</a></li>
 
             </ul>
@@ -95,7 +98,34 @@
       </div>
     </div>
   </div>
+
+
+
+
+
+  <section class="info-cards-section">
+    <div class="info-card">
+        <div class="info-card-content">
+            <img src="assets/images/Trackrecord.png" alt="Icon 1" class="info-card-icon">
+            <p>Conocimientos <strong>básicos requeridos</strong></p>
+            <img src="assets/images/Referidos.png" alt="Icon 3" class="info-card-icon">
+            <p>únete a una<strong>comunidad exclusiva</strong> de +1.000 miembros</p>
+            <img src="assets/images/Referidos.png" alt="Icon 3" class="info-card-icon">
+            <p>Únete a una <strong>comunidad exclusiva</strong> de +1.000 miembros</p>
+        </div>
+    </div>
+    
+</section>
+
+
+
+
+
+
   <section class="trading-section">
+
+
+
     <div class="content">
       <h2><strong>Modalidad de</strong> los <span>planes de trading</span></h2>
       <p class="description">Todas las <strong style="color: #f1c40f;">entradas</strong> que se comparten incluyen:
@@ -202,13 +232,85 @@
   </div>
 
 
+  <section class="pricing-section">
+    <h1>Nuestros planes</h1>
+    <div class="card-container">
+        <!-- Solo Alertas Plan -->
+        <!-- Pro Plan -->
+        <div class="card">
+            <h2>SOLO ALERTAS</h2>
+            <p class="price"><span class="currency">U$D</span> 50<span class="month">/mes</span></p>
+            <p class="date">Comienza hoy, finaliza en 30 días</p>
+            <p class="benefits-title">Principales beneficios:</p>
+            <ul class="benefits-list">
+                <li><strong>Planes de trading.</strong></li>
+                <li style="margin-left: 10px;">Diversas temporalidades, con información detallada.</li>
+                <li>Entre <strong>15 y 30 alertas mensuales.</strong></li>
+                <li style="margin-left: 10px;"><strong>Actualizaciones diarias</strong> del estado del mercado y de
+                    las inversiones realizadas.</li>
+            </ul>
+            <p class="requirement">
+                Se requiere Telegram
+                <a href="#" class="button-link">
+                    <img src="assets/images/Wolf Premium - Nuestros planes - Boton Apagado.png" alt="Subscribe Button" class="subscribe-img">
+                </a>
+            </p>
+        </div>
 
+        <!-- Pro Plan -->
+        <div class="card">
+            <h2>PRO</h2>
+            <p class="price"><span class="currency">U$D</span> 70<span class="month">/mes</span></p>
+            <p class="date">Comienza hoy, finaliza en 30 días</p>
+            <p class="benefits-title">Todos los beneficios de la básica, más:</p>
+            <ul class="benefits-list">
+                <li><strong>Streaming semanal en vivo.</strong></li>
+                <li style="margin-left: 10px;">Revisamos el mercado juntos y buscamos oportunidades de inversión.
+                </li>
+                <li> <strong>Canales privados</strong> para realizar consultas y compartir ideas libremente.</li>
+                <li>Oportunidades de inversión adicionales a través de los canales privados.</li>
+                <li>Se otorgan los beneficios del <strong class="underlined-strong">nivel 5.</strong></li>
+            </ul>
+            <p class="requirement">
+                Se requiere Discord
+                <a href="#" class="button-link">
+                    <img src="assets/images/Wolf Premium - Nuestros planes - Boton Apagado.png" alt="Subscribe Button" class="subscribe-img">
+                </a>
+            </p>
+        </div>
+
+        <!-- Pro+ Plan -->
+        <div class="card">
+            <h2>PRO+</h2>
+            <p class="price"><span class="currency">U$D</span> 900<span class="month">/x2 meses</span></p>
+            <p class="date">Comienza hoy, finaliza en 60 días</p>
+            <p class="benefits-title">Todos los beneficios de las anteriores, más:</p>
+            <ul class="benefits-list">
+                <li><strong>Asesoramiento personalizado</strong> con uno de nuestros traders profesionales.</li>
+                <li><strong>Análisis avanzados</strong> basados en Análisis Técnico y Fundamental de activos en
+                    concreto.</li>
+                <li><strong>3 cursos completos</strong> en formato PDF para todos los niveles (básico, intermedio y
+                    avanzado).</li>
+                <li>Se otorgan los beneficios del <strong class="underlined-strong">nivel 15.</strong></li>
+            </ul>
+            <p class="requirement">
+                Se requiere Discord
+                <a href="#" class="button-link">
+                    <img src="assets/images/Wolf Premium - Nuestros planes - Boton Apagado.png" alt="Subscribe Button" class="subscribe-img">
+                </a>
+            </p>
+        </div>
+    </div>
+</section>
+
+<script></script>
 
 
   <!-- Scripts importantes-->
   <script src="assets/js/isotope.min.js"></script>
   <script src="assets/js/owl-carousel.js"></script>
   <script src="assets/js/custom.js"></script>
+  <script src="assets/js/faq.js"></script>
   <!-- Bootstrap core JavaScript -->
 
 
